@@ -4,6 +4,7 @@ Alpha 0.1.8.24
 - Added new config option "loadChunksForToggle" (default: true) that determines how the plugin handles unloaded chunks. When set to true, it will load any necessary chunks and move the blocks without animation. When set to false, it will abort the toggle attempt (and not load any chunks).
 - Added new config option "skipUnloadedAutoCloseToggle" (default: true) that will prevent a door being toggled in unloaded chunks if it has an autoCloseTimer set, to avoid unnecessary chunk loading. Only takes effect if "loadChunksForToggle" is enabled.
 - Added new config option "maxPowerBlockDistance" (default: -1 (unlimited)) that, as the name implies, limits the maximum distance between a powerblock and the door it belongs to (its engine, specifically). Thanks, @PirateCraft, for the suggestion!
+- Added new config option "maxAutoCloseTimer" (default 6000 (=5 mins)) that determines the time limit for autoCloseTimers. 
 
 Alpha 0.1.8.23
 - Added full support for 1.16's new blocks so you no longer have to manually add them to the whitelist. Thanks, @thedarkonekiller, for the bug report!
